RM Search enhancements and fixes: . Date Insert calendar component - inserts a date in query encoded format . "All Records/Folders" search can now be performed by simply clicking Search with no query terms (i.e no need for ISNODE:T or similar query) . Cutoff is now a selectable search constraint (like Frozen or Vital Record) . Increased height of the results meta-data selection box . Fix to issue where custom props were not showing correct label - since service API changes . Fix to issue where Saved Search would not be updated in menu if an item with the same label already existed
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@16166 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/modules/dod-5015-share/source/web/components/rmresults-common/rmoptions.css
+++ b/root/modules/dod-5015-share/source/web/components/rmresults-common/rmoptions.css
@@ -9,7 +9,7 @@
    background-color: #FFFFFF;
    line-height: 1.5em;
    padding: 6px 6px 4px 8px;
-   height: 6em;
+   height: 12.5em;
    min-width: 20em;
    overflow-y: auto;
    overflow-x: hidden;
